# lotus-client-schema-rs

./: Cargo.toml  LICENSE-APACHE  README.md  txt.json
go-schemagen/: generate-common-types.sh  generate-schema-for-api.sh  go.mod  go.sum  main.go
src/: client.rs  error.rs  lib.rs
