[package]
name = "lotus-client-schema-rs"
version = "0.1.1"
edition = "2021"
description = "Rust client library for interacting with Lotus JSON-RPC API"
license = "MIT"

exclude = ["go-schemagen/"]

[dependencies]
async-trait = "0.1.83"
jsonrpc-core = "18.0.0"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
jsonrpsee = { version = "0.24", features = ["http-client"] }
jsonrpsee-core = { version = "0.24" }
thiserror = "1.0.65"
hyper = { version = "1.3", features = ["client", "http1", "http2"] }
uuid = { version = "1.11.0", features = ["serde"] }
